--- a/Archives/Template HelpStudio/HelpStudio 2005 Arabic Style/stylesheets/webnav.css
+++ b/Archives/Template HelpStudio/HelpStudio 2005 Arabic Style/stylesheets/webnav.css
@@ -52,7 +52,7 @@ td
 {
         white-space: nowrap;
         font-size: 10pt;
-        vertical-align: middle;
+        vertical-align: top;
 }
 
 table
@@ -94,4 +94,7 @@ body
         padding: 0px;
         margin: 0px;
         width: 100%;
+}#toolbarcontainer #navtoolbar {
+	text-indent: 20px;
+	
 }
