--- a/CurrentRelease/zh/stylesheets/webnav.css
+++ b/CurrentRelease/zh/stylesheets/webnav.css
@@ -51,7 +51,7 @@ td
 {
         white-space: nowrap;
         font-size: 10pt;
-        vertical-align: middle;
+        vertical-align: top;
 }
 
 table
@@ -93,4 +93,7 @@ body
         padding: 0px;
         margin: 0px;
         width: 100%;
+}#toolbarcontainer #navtoolbar {
+	text-indent: 20px;
+	
 }
